--- a/LAB2/signup.html
+++ b/LAB2/signup.html
@@ -39,10 +39,10 @@
         </p>
         <p>
             <strong> 어느 대학교에 다니세요? </strong><br>
-            <label> 연세대학교  <input type="radio" name="myUniversity" value="Yonsei University" checked> </label>
-            <label> 고려대학교 <input type="radio" name="myUniversity" value="Korea University"> </label>
-            <label> 서울대학교 <input type="radio" name="myUniversity" value="Seoul University"> </label>
-            <label> 서강대학교 <input type="radio" name="myUniversity" value="SogangUniversity"> </label>
+            <label> <input type="radio" name="myUniversity" value="Yonsei University" checked> 연세대학교  </label>
+            <label> <input type="radio" name="myUniversity" value="Korea University"> 고려대학교 </label>
+            <label> <input type="radio" name="myUniversity" value="Seoul University"> 서울대학교 </label>
+            <label> <input type="radio" name="myUniversity" value="Sogang University"> 서강대학교 </label>
         </p>
         <p>
             <input name ="submit" type = "submit" value="Sign up"  class="btn LGreenC"/>
